--- a/README
+++ b/README
@@ -1,4 +1,19 @@
-RECIPES
+Paolaoffelli
+========================
+
+This application was generated with the rails_apps_composer gem:
+https://github.com/RailsApps/rails_apps_composer
+provided by the RailsApps Project:
+http://railsapps.github.com/
+
+________________________
+
+Recipes:
 ["controllers", "core", "email", "extras", "frontend", "gems", "git", "init", "models", "prelaunch", "railsapps", "readme", "routes", "saas", "setup", "testing", "views"]
-PREFERENCES
-{:git=>true, :railsapps=>"none", :dev_webserver=>"webrick", :prod_webserver=>"thin", :database=>"sqlite", :templates=>"haml", :unit_test=>"rspec", :integration=>"none", :fixtures=>"factory_girl", :frontend=>"foundation", :email=>"none", :authentication=>"devise", :devise_modules=>"default", :authorization=>"none", :form_builder=>"none", :starter_app=>"home_app"}
+
+Preferences:
+{:git=>true, :railsapps=>"none", :dev_webserver=>"webrick", :prod_webserver=>"thin", :database=>"sqlite", :templates=>"haml", :unit_test=>"rspec", :integration=>"none", :fixtures=>"factory_girl", :frontend=>"foundation", :email=>"none", :authentication=>"devise", :devise_modules=>"default", :authorization=>"none", :form_builder=>"none", :starter_app=>"home_app", :quiet_assets=>true, :local_env_file=>true, :better_errors=>true, :ban_spiders=>true, :rvmrc=>true, :github=>true}
+
+________________________
+
+License
